--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
+    "faker": "^5.5.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -15,6 +16,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.0"
   }
 }
