--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "faker": "^5.5.3",
     "next": "latest",
+    "next-auth": "^4.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
