--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "faker": "^5.5.3",
+    "firebase": "^9.6.1",
     "next": "latest",
     "next-auth": "^4.0.5",
     "react": "^17.0.2",
